--- a/package.json
+++ b/package.json
@@ -92,5 +92,18 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": ".eslintrc.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sparcs-kaist/sciwar_2017.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sparcs-kaist/sciwar_2017/issues"
+  },
+  "homepage": "https://github.com/sparcs-kaist/sciwar_2017#readme"
 }
