--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "bulma": "^0.4.3",
+    "bulma": "^0.4.4",
+    "css-loader": "^0.28.4",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "vue-style-loader": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
