--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,14 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bluebird": "^3.5.0",
     "bulma": "^0.4.4",
     "crypto": "^1.0.1",
     "css-loader": "^0.28.4",
+    "es6-promise": "^4.1.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "js-cookie": "^2.1.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue": "^2.3.3",
